<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <CheckBox
        android:id="@+id/plus_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_box" />

    <CheckBox
        android:id="@+id/min_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_box" />

    <CheckBox
    android:id="@+id/keer_option"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/keer_box" />

    <CheckBox
        android:id="@+id/deel_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deel_box" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_label" />

</LinearLayout>